[package]
name = "api-challenge"
version = "0.1.0"
authors = ["Gary Mansell <gary.mansell@cyberlytic.com>"]

[dependencies]
rocket = "0.3.14"
rocket_codegen = "0.3.14"
# rocket_contrib = "0.3.14"
bson = "0.10.0"
mongodb = "0.3.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]